motivation example and scope for BEAPI

--- a/beapi.tex
+++ b/beapi.tex
@@ -1,4 +1,4 @@
-\chapter{Generacion Exhaustiva acotada desde API de los programas (FASE 23)}
+\chapter{Generacion Exhaustiva acotada desde API de los programas}
 
 
 \label{cap:beapi}
@@ -9,7 +9,7 @@ En adelante, se presenta la técnica  desarrollada llamada BEAPI, que tiene como
 \section[Motivation]{motivation}
 \label{sec:motivation}
 
-Para motivar las dificultades de escribir especificaciones formales para la generación de estructuras exhaustiva acotadas,  considére el invariante de representación (conmunmente llamados \emph{repOK}) de la clase \emph{NodeCachingLinkedList} (NCL) de Apache, que se muestra en la Figura \ref{fig:NCL-repOK}. Este es un repOK del benchmarks \emph{ROOPS}. Los NCL se componen de una lista principal circular doblemente enlazada, utilizada para el almacenamiento de datos, y una caché de nodos previamente utilizados implementada como una lista enlazada simple. Los nodos eliminados de la lista principal se mueven a la caché, donde se guardan para su uso en el futuro. De esta manera, cuando se requiere un nodo para una operación de inserción, se reutiliza un nodo de la caché (si existe) en lugar de asignar un nuevo nodo. El objetivo es evitar la sobrecarga de recolección de basura para las aplicaciones que realizan una gran cantidad de inserciones y eliminaciones en la lista. El \emph{repOK} devuelve true si y solo si la estructura de entrada satisface las propiedades estructurales de NCL \cite{Liskov00}. Las líneas 1 a 20 verifican que la lista principal sea una lista circular doblemente enlazada con una cabeza ficticia; las líneas 21 a 33 verifican que la caché sea una lista enlazada simple terminada en nulo (y se verifica la consistencia de los campos de tamaño en el proceso). Se observa que repOK está escrito de la manera recomendada por los autores para el enfoque de generación exhaustiva de BE, \textsf{Korat} \cite{Boyapati02}. Este devuelve False tan pronto como encuentra una violación de una propiedad prevista en la entrada actual. De lo contrario, devuelve Verdadero al final. Estos repOK permiten a \textsf{Korat} podar grandes porciones del espacio de búsqueda, lo que mejora en gran medida su eficiencia.
+Para motivar las dificultades de escribir especificaciones formales para la generación de estructuras exhaustiva acotadas,  considére el invariante de representación (conmunmente llamados \emph{repOK}) de la clase \emph{NodeCachingLinkedList} (NCL) de Apache, que se muestra en la Figura \ref{fig:NCL-repOK}. Este es un repOK del benchmarks \emph{ROOPS}. Los NCL se componen de una lista principal circular doblemente enlazada, utilizada para el almacenamiento de datos, y una caché de nodos previamente utilizados implementada como una lista enlazada simple. Los nodos eliminados de la lista principal se mueven a la caché, donde se guardan para su uso en el futuro. De esta manera, cuando se requiere un nodo para una operación de inserción, se reutiliza un nodo de la caché (si existe) en lugar de asignar un nuevo nodo. El objetivo es evitar la sobrecarga de recolección de basura para las aplicaciones que realizan una gran cantidad de inserciones y eliminaciones en la lista. El \emph{repOK} devuelve true si y solo si la estructura de entrada satisface las propiedades estructurales de NCL \cite{Liskov00}. Las líneas 1 a 20 verifican que la lista principal sea una lista circular doblemente enlazada con una cabeza ficticia; las líneas 21 a 33 verifican que la caché sea una lista enlazada simple terminada en nulo (y se verifica la consistencia de los campos de tamaño en el proceso). Se observa que repOK está escrito de la manera recomendada por los autores del enfoque de generación exhaustiva de BE, \textsf{Korat} \cite{Boyapati02}. Este devuelve False tan pronto como encuentra una violación de una propiedad prevista en la entrada actual. De lo contrario, devuelve Verdadero al final. Estos repOK permiten a \textsf{Korat} podar grandes porciones del espacio de búsqueda, lo que mejora en gran medida su eficiencia.
 
 
 \begin{figure}[!thb]
@@ -61,7 +61,7 @@ Este ejemplo muestra que escribir \texttt{repOK}s sólidos y precisos para BEG e
 
 \section[BEAPI]{BEAPI}
 \label{sec:beapiIntro}
-La técnica propuesta, llamada \textsf{BEAPI} (Bounded Exhaustive API), introduce un enfoque novedoso para la generación de BE (Bounded Exhaustive). Este enfoque se basa en la realización de llamadas a las rutinas de la API del Software bajo test (SUT). Al igual que otros enfoques de generación de pruebas basados en API, \textsf{BEAPI} crea secuencias de llamadas a métodos de la API, conocidas como secuencias de test, y las ejecuta para generar estructuras.
+La técnica propuesta, llamada \textsf{BEAPI} (Bounded Exhaustive from API), introduce un enfoque novedoso para la generación exhaustiva acotada. Este enfoque se basa en la realización de llamadas a las rutinas de la API del Software bajo test (SUT). Al igual que otros enfoques de generación de pruebas basados en API, \textsf{BEAPI} crea secuencias de llamadas a métodos de la API, conocidas como secuencias de test, y las ejecuta para generar estructuras.
 
 A diferencia de los enfoques de generación basados en caja negra, \textsf{BEAPI} no requiere una especificación formal de las propiedades de las estructuras. En lugar de eso, el usuario lo único que debe proporcionar son los alcances para la generación, lo cual se aborda en detalle en la sección \ref{ref:scope}.
 
@@ -75,7 +75,7 @@ En tercer lugar, \textsf{BEAPI} utiliza un subconjunto de las rutinas de la API 
 
 La principal ventaja de \textsf{BEAPI} es que requiere un esfuerzo mínimo de especificación para realizar la generación exhaustiva acotada (BEG). Si los métodos de la API utilizados en la generación son correctos, todas las estructuras generadas serán válidas para su construcción. El programador solo necesita asegurarse de que los métodos de la API lancen excepciones cuando se violen las reglas de uso, siguiendo un estilo de programación defensivo \cite{Liskov00}. En la mayoría de los casos, esto implica verificar condiciones muy simples en las entradas. Por ejemplo, en el ejemplo mencionado, el método para agregar un elemento a un \texttt{NCL} lanza una \texttt{IllegalArgumentException} cuando se llama con un elemento \texttt{null}, mientras que la implementación del método se encarga de cumplir con las demás propiedades del \texttt{NCL}.
 
-\cacho{TODO: no se si agregar arbolitos para explicarlos}
+\cacho{TODO: no se si agregar arbolitos de exploracion para explicarlos}
 \\
 \\
 % \begin{tikzpicture}
@@ -118,12 +118,38 @@ omit.fields=NCL.DEFAULT_MAXIMUM_CACHE_SIZE
 \label{fig:NCL-fin-BEAPI}
 \end{figure}
 
-La definición de los alcances en \textsf{Korat} implica proporcionar dominios de datos acotados para las clases y campos de NCL, ya que \textsf{Korat} explora el espacio de estado de los candidatos factibles de NCL y produce el conjunto de estructuras que satisfacen repOK como resultado. En cambio, \textsf{BEAPI} explora el espacio de búsqueda de secuencias de prueba (acotadas) que se pueden formar mediante llamadas a la API de \texttt{NCL}. Por lo tanto, tenemos que proporcionar dominios de datos para los tipos primitivos utilizados para realizar dichas llamadas y un límite en el tamaño máximo de las estructuras que queremos mantener de las generadas por esas llamadas de API. Un archivo de configuración de ejemplo que define los alcances de \textsf{BEAPI} para el estudio de caso de \texttt{NCL} se muestra en la Figura~\ref{fig:NCL-fin-BEAPI}. El parámetro \texttt{max.objects} especifica el número máximo de objetos diferentes (alcanzables desde la raíz) que se permite que una estructura tenga. Las secuencias de prueba que crean una estructura que contiene un número mayor de objetos diferentes (de cualquier clase) que \texttt{max.objects} se descartarán (y también la estructura corriente). En nuestro ejemplo, esto implica que \textsf{BEAPI} no creará NCL con más de 3 nodos. A continuación, hay que especificar los valores que \textsf{BEAPI} utilizará para invocar las rutinas de API que toman parámetros de tipo primitivo (por ejemplo, elementos para insertar en la lista, etc.). El parámetro \texttt{int.range} permite especificar un rango de enteros, que va desde 0 hasta 2 en la Figure~\ref{fig:NCL-fin-BEAPI}. También se pueden especificar dominios para otros tipos primitivos como flotantes, dobles y cadenas describiendo sus valores por extensión. Por ejemplo, la figura define \texttt{str1}, \texttt{str2} y \texttt{str3} como los valores factibles para los parámetros de tipo String. Además, podemos informar a \textsf{BEAPI} qué campos relevantes considerar para la canonización de la estructura o qué campos de las estructuras omitir (\texttt{omit.fields}). Esto permite al usuario controlar el proceso de coincidencia de estados. Por ejemplo, descomentando la línea 4, haria que \textsf{BEAPI} omitiera el tamaño máximo predeterminado de la caché en la coincidencia de estados, que en nuestro ejemplo es una constante inicializada en 20 en el constructor de la clase. En este caso, omitir el campo no cambia nada en términos de las diferentes estructuras generadas por \textsf{BEAPI}, pero en otros casos, omitir campos puede ser importante. La configuración de la Figura 2 es suficiente para que \textsf{BEAPI} genere NCL con un máximo de 3 nodos, que contienen enteros del 0 al 2 como valores, lo que nos permitió imitar las estructuras generadas por Korat para los mismos ámbitos (algunas líneas están comentadas porque no son necesarias para esto). Los archivos de configuración utilizados en nuestra sección experimental son similares al que se muestra aquí.
+\textsf{BEAPI} explora el espacio de búsqueda de secuencias de prueba (acotadas) que se pueden formar mediante llamadas a la API de \texttt{NCL}. Por lo tanto, debemos proporcionar dominios de datos para los tipos primitivos utilizados en esas llamadas y establecer un límite en el tamaño máximo de las estructuras que deseamos generar a partir de esas llamadas de API.
+
+A continuación se muestra un ejemplo de archivo de configuración que define los alcances de \textsf{BEAPI} para el estudio de caso de \texttt{NCL}:
+
+\begin{figure}[h!]
+    \centering
+    \begin{verbatim}
+max.objects = 3
+int.range = 0, 2
+str1 = "value1"
+str2 = "value2"
+str3 = "value3"
+omit.fields = maxCacheSize, modCounts
+    \end{verbatim}
+    \caption{Archivo de configuración de \textsf{BEAPI} para el estudio de caso de \texttt{NCL}}
+    \label{fig:NCL-fin-BEAPI}
+\end{figure}
+
+El parámetro \texttt{max.objects} especifica el número máximo de objetos diferentes (alcanzables desde la raíz) permitidos en una estructura. Las secuencias de prueba que crean una estructura con más objetos diferentes (de cualquier clase) que \texttt{max.objects} se descartarán, junto con la estructura actual. En nuestro ejemplo, esto implica que \textsf{BEAPI} no creará NCL con más de 3 nodos.
+
+Además, debemos especificar los valores que \textsf{BEAPI} utilizará para invocar las rutinas de la API que toman parámetros de tipo primitivo. El parámetro \texttt{int.range} permite especificar un rango de enteros, que va desde 0 hasta 2 en la Figura~\ref{fig:NCL-fin-BEAPI}. También se pueden especificar dominios para otros tipos primitivos, como flotantes, dobles y cadenas, describiendo sus valores por extensión. Por ejemplo, en la figura se definen \texttt{str1}, \texttt{str2} y \texttt{str3} como los valores factibles para los parámetros de tipo \texttt{String}.
+
+Además, podemos informar a \textsf{BEAPI} qué campos relevantes considerar para la canonización de la estructura o qué campos omitir (\texttt{omit.fields}). Esto permite al usuario controlar el proceso de coincidencia de estados. Por ejemplo,  la línea 4 haría que \textsf{BEAPI} omita el tamaño máximo predeterminado de la caché en la coincidencia de estados, que en nuestro ejemplo es una constante inicializada en 20 en el constructor de la clase. Además, esta linea omitirá el campo \emph{modCount} que hemos hablado en el capitulo de identificación de métodos builders. En algunos casos, omitir estos tipos de campos puede ser importante.
+
+La configuración mostrada en la Figura~\ref{fig:NCL-fin-BEAPI} es suficiente para que \textsf{BEAPI} genere NCL con un máximo de 3 nodos, que contienen enteros del 0 al 2 como valores. Los archivos de configuración utilizados en nuestra sección experimental son similares a los mostrados aquí.
+
 
 \section{State Matching}
 \label{sec:state-matching}
 
-En la generación de pruebas con \textsf{BEAPI} a menudo muchas secuencias de prueba producen la misma estructura, por ejemplo, insertar un elemento en una lista y luego eliminarlo. \textsf{BEAPI} asume que las ejecuciones de métodos son deterministas: cualquier ejecución de una rutina con las mismas entradas produce los mismos resultados. Observamos que, para cada estructura distinta s, solo necesitamos guardar la primera secuencia de prueba que genera \texttt{s} (y la estructura en sí). Todas las secuencias de prueba generadas posteriormente que también crean \texttt{s} pueden ser descartadas. Nótese que, como \textsf{BEAPI} trabaja extendiendo secuencias de prueba previamente generadas (ver seccion TODO ????), si guardamos muchas secuencias de prueba para la misma estructura, todas estas secuencias tendrían que ser extendidas con nuevas rutinas en iteraciones posteriores de \textsf{BEAPI}, lo que resultaría en muchos cálculos innecesarios. Por lo tanto, implementamos la coincidencia de estados en \textsf{BEAPI} de la siguiente manera. Almacenamos todas las estructuras producidas hasta ahora por \textsf{BEAPI} en una forma canónica (ver más abajo). Después de ejecutar la última rutina \texttt{r(p$_1$,..,p$_k$)} de una nueva secuencia de prueba generada \texttt{T}, comprobamos si alguno de los parámetros de \texttt{r} tiene una estructura no vista antes (no almacenada). Si T no crea ninguna estructura nueva, se descarta. De lo contrario, \texttt{T} y las nuevas estructuras que genera son almacenadas por \textsf{BEAPI}.
+En la generación de pruebas con \textsf{BEAPI} a menudo muchas secuencias de prueba producen la misma estructura, por ejemplo, insertar un elemento en una lista y luego eliminarlo. \textsf{BEAPI} asume que las ejecuciones de métodos son deterministas: cualquier ejecución de una rutina con las mismas entradas produce los mismos resultados. Observamos que, para cada estructura distinta s, solo necesitamos guardar la primera secuencia de prueba que genera \texttt{s} (y la estructura en sí). Todas las secuencias de prueba generadas posteriormente que también crean \texttt{s} pueden ser descartadas. Nótese que, como \textsf{BEAPI} trabaja extendiendo secuencias de prueba previamente generadas %(ver seccion TODO ????)
+, si guardamos muchas secuencias de prueba para la misma estructura, todas estas secuencias tendrían que ser extendidas con nuevas rutinas en iteraciones posteriores de \textsf{BEAPI}, lo que resultaría en muchos cálculos innecesarios. Por lo tanto, implementamos la coincidencia de estados en \textsf{BEAPI} de la siguiente manera. Almacenamos todas las estructuras producidas hasta ahora por \textsf{BEAPI} en una forma canónica (ver más abajo). Después de ejecutar la última rutina \texttt{r(p$_1$,..,p$_k$)} de una nueva secuencia de prueba generada \texttt{T}, comprobamos si alguno de los parámetros de \texttt{r} tiene una estructura no vista antes (no almacenada). Si T no crea ninguna estructura nueva, se descarta. De lo contrario, \texttt{T} y las nuevas estructuras que genera son almacenadas por \textsf{BEAPI}.
 
 Representamos las estructuras asignadas en el montículo como grafos etiquetados. Después de la ejecución de un método, un parámetro $p$  (de tipo no primitivo) contiene una referencia al objeto raíz $r$ de un montículo con raíz (es decir,  $p=r$), definido a continuación.
 
@@ -136,10 +162,9 @@ Representamos las estructuras asignadas en el montículo como grafos etiquetados
     \end{itemize}
 \end{definition}
 
-El caso especial $p=null$  se puede representar con un montículo con raíz con un nodo ficticio y un campo ficticio que apunta a null. En lenguajes como Java, cada objeto se identifica por la dirección de memoria donde se encuentra. Cambiar las direcciones de memoria donde se asignan los objetos no tiene efecto desde el punto de vista del programa, ya que el programador no tiene control sobre la representación de bajo nivel de la memoria (a diferencia de otros lenguajes como C). Los montículos obtenidos por permutaciones de las direcciones de memoria de sus objetos componentes se llaman \emph{heap isomorfos}. Evitamos la generación de \emph{heaps isomorfos} empleando una representación canónica para heaps [TODO ???]. Los heaps enraizados se pueden canonizar eficientemente mediante un enfoque llamado \emph{linearización} [TODO ???], que transforma un heap enraizado en una secuencia única de valores. 
+El caso especial $p=null$  se puede representar con un montículo con raíz con un nodo ficticio y un campo ficticio que apunta a null. En lenguajes como Java, cada objeto se identifica por la dirección de memoria donde se encuentra. Cambiar las direcciones de memoria donde se asignan los objetos no tiene efecto desde el punto de vista del programa, ya que el programador no tiene control sobre la representación de bajo nivel de la memoria (a diferencia de otros lenguajes como C). Los montículos obtenidos por permutaciones de las direcciones de memoria de sus objetos componentes se llaman \emph{heap isomorfos}. Evitamos la generación de \emph{heaps isomorfos} empleando una representación canónica para heaps \cite{Iosif02,Boyapati02}. Los heaps enraizados se pueden canonizar eficientemente mediante un enfoque llamado \emph{linearización} \cite{Iosif02,Xie04}, que transforma un heap enraizado en una secuencia única de valores. 
 
-
-[TODO CHANGE algortimo]
+\cacho{Lo cambio a espanol?}
 \bigbreak
 
 \begin{figure}[!th]
@@ -174,7 +199,7 @@ Regex omitFields) {
 \end{figure}
 
 
-Se muestra en la Figura~\ref{alg:linearization} una versión personalizada para \textsf{BEAPI} del algoritmo de linearización de [TODO ???].El mismo fue modificado para informar cuando los objetos exceden los alcances y para admitir la omisión de campos de objeto. \texttt{linearize} invoca a \texttt{lin} y  comienza un recorrido en profundidad heap desde la raíz (línea 3). \texttt{linearize} asigna identificadores de objeto diferentes a cada objeto visitado. Cuando se visita un objeto por primera vez, se le asigna un nuevo identificador único (líneas 10-11) y se crea una secuencia de un solo elemento, seq, con el identificador de objeto para representar el objeto (línea 12). \texttt{ids} almacena el mapeo entre los objetos y los identificadores de objeto únicos. Luego, los campos del objeto, ordenados en un orden predefinido (por ejemplo, por nombre), se recorren y se construye la linearización de cada valor de campo y se agrega a la secuencia que representa el objeto, seq (líneas 13-19). Si un campo almacena un valor primitivo (línea 15), se agrega una secuencia de un solo elemento que representa el valor a seq (línea 16). Si el campo hace referencia a un objeto, se realiza una llamada recursiva a \texttt{lin}  para transformarlo en una secuencia, que se agregará a seq (línea 18). Al final del bucle, \texttt{seq}  contiene la representación canónica de todo el heap que comienza en la \texttt{raíz} , y se devuelve por \texttt{lin} (línea 20). Cuando se encuentra un objeto ya visitado por una llamada recursiva, es decir, que ya tiene un identificador asignado en  \texttt{ids}, el algoritmo devuelve la secuencia de un solo elemento con el identificador único del objeto (líneas 6-7). Si hay más de \texttt{scope} objetos alcanzables desde el heap enraizado, \texttt{linearize} devuelve una excepción para informar que se han superado los alcances (líneas 9-10). \texttt{linearize} también toma como parámetro una expresión regular \texttt{omitFields}, que coincide con los nombres de los campos que deben ser omitidos durante la canonicación (ver Sección~TODO REF). Para omitir tales campos, implementamos \texttt{sortByField} (línea 13) de tal manera que no devuelve las aristas correspondientes a los campos cuyos nombres coinciden con \texttt{omitFields}. Este comportamiento es particular de nuestro enfoque, ya que la excepción será empleada por BEAPI para descartar secuencias de prueba que creen objetos más grandes de lo permitido por los alcances. Nótese que la linearización permite la comparación eficiente de objetos: dos objetos son iguales si y solo si sus secuencias correspondientes generadas por \texttt{linearize} son iguales.
+Se muestra en la Figura~\ref{alg:linearization} una versión personalizada para \textsf{BEAPI} del algoritmo de linearización de  \cite{Xie04} .El mismo fue modificado para informar cuando los objetos exceden los alcances y para admitir la omisión de campos de objeto. \texttt{linearize} invoca a \texttt{lin} y  comienza un recorrido en profundidad heap desde la raíz (línea 3). \texttt{linearize} asigna identificadores de objeto diferentes a cada objeto visitado. Cuando se visita un objeto por primera vez, se le asigna un nuevo identificador único (líneas 10-11) y se crea una secuencia de un solo elemento, seq, con el identificador de objeto para representar el objeto (línea 12). \texttt{ids} almacena el mapeo entre los objetos y los identificadores de objeto únicos. Luego, los campos del objeto, ordenados en un orden predefinido (por ejemplo, por nombre), se recorren y se construye la linearización de cada valor de campo y se agrega a la secuencia que representa el objeto, seq (líneas 13-19). Si un campo almacena un valor primitivo (línea 15), se agrega una secuencia de un solo elemento que representa el valor a seq (línea 16). Si el campo hace referencia a un objeto, se realiza una llamada recursiva a \texttt{lin}  para transformarlo en una secuencia, que se agregará a seq (línea 18). Al final del bucle, \texttt{seq}  contiene la representación canónica de todo el heap que comienza en la \texttt{raíz} , y se devuelve por \texttt{lin} (línea 20). Cuando se encuentra un objeto ya visitado por una llamada recursiva, es decir, que ya tiene un identificador asignado en  \texttt{ids}, el algoritmo devuelve la secuencia de un solo elemento con el identificador único del objeto (líneas 6-7). Si hay más de \texttt{scope} objetos alcanzables desde el heap enraizado, \texttt{linearize} devuelve una excepción para informar que se han superado los alcances (líneas 9-10). \texttt{linearize} también toma como parámetro una expresión regular \texttt{omitFields}, que coincide con los nombres de los campos que deben ser omitidos durante la canonicación (ver Sección~TODO REF). Para omitir tales campos, implementamos \texttt{sortByField} (línea 13) de tal manera que no devuelve las aristas correspondientes a los campos cuyos nombres coinciden con \texttt{omitFields}. Este comportamiento es particular de nuestro enfoque, ya que la excepción será empleada por BEAPI para descartar secuencias de prueba que creen objetos más grandes de lo permitido por los alcances. Nótese que la linearización permite la comparación eficiente de objetos: dos objetos son iguales si y solo si sus secuencias correspondientes generadas por \texttt{linearize} son iguales.
 
 
 \section{Uso de Builders en BEAPI}
@@ -188,7 +213,7 @@ A continuación se muestra un pseudocódigo de \textsf{BEAPI} en la Figura \ref{
 
 
 \begin{figure}[t!]
-\cacho{[TODO CHANGE]}
+\cacho{cambio a espanol?}
 
 \begin{lstlisting}[language=Java]
 public BEAPI(List methods, int scope, Map<Type, 
