Add builders in BEAPI

--- a/beapi.tex
+++ b/beapi.tex
@@ -7,7 +7,7 @@ En adelante, se presenta la técnica  desarrollada llamada BEAPI, que tiene como
 
 
 \section[Motivation]{motivation}
-\label{sec:motivation}
+\label{sec:motivating-example}
 
 Para motivar las dificultades de escribir especificaciones formales para la generación de estructuras exhaustiva acotadas,  considére el invariante de representación (conmunmente llamados \emph{repOK}) de la clase \emph{NodeCachingLinkedList} (NCL) de Apache, que se muestra en la Figura \ref{fig:NCL-repOK}. Este es un repOK del benchmarks \emph{ROOPS}. Los NCL se componen de una lista principal circular doblemente enlazada, utilizada para el almacenamiento de datos, y una caché de nodos previamente utilizados implementada como una lista enlazada simple. Los nodos eliminados de la lista principal se mueven a la caché, donde se guardan para su uso en el futuro. De esta manera, cuando se requiere un nodo para una operación de inserción, se reutiliza un nodo de la caché (si existe) en lugar de asignar un nuevo nodo. El objetivo es evitar la sobrecarga de recolección de basura para las aplicaciones que realizan una gran cantidad de inserciones y eliminaciones en la lista. El \emph{repOK} devuelve true si y solo si la estructura de entrada satisface las propiedades estructurales de NCL \cite{Liskov00}. Las líneas 1 a 20 verifican que la lista principal sea una lista circular doblemente enlazada con una cabeza ficticia; las líneas 21 a 33 verifican que la caché sea una lista enlazada simple terminada en nulo (y se verifica la consistencia de los campos de tamaño en el proceso). Se observa que repOK está escrito de la manera recomendada por los autores del enfoque de generación exhaustiva de BE, \textsf{Korat} \cite{Boyapati02}. Este devuelve False tan pronto como encuentra una violación de una propiedad prevista en la entrada actual. De lo contrario, devuelve Verdadero al final. Estos repOK permiten a \textsf{Korat} podar grandes porciones del espacio de búsqueda, lo que mejora en gran medida su eficiencia.
 
@@ -205,6 +205,9 @@ Se muestra en la Figura~\ref{alg:linearization} una versión personalizada para 
 \section{Uso de Builders en BEAPI}
 \label{sec:builders}
 
+Dado que las combinaciones factibles de métodos crecen de manera exponencial con el número de métodos, es crucial reducir la cantidad de métodos que \textsf{BEAPI} utiliza para producir secuencias de prueba. Para evitar este problema, utilizamos el enfoque de identificación automático de métodos \emph{builders} presentado en el capitulo anterior (Capitulo \ref{cap:builders}) para encontrar un subconjunto de métodos de la API que son suficientes para la generación de conjuntos de estructuras acotadas y exhaustivas. Para el propósito que necesitamos en \textsf{BEPAI} el enfoque  para identificar un subconjunto de builders suficientes de una API que se basa en un algoritmo Greedy, nos fue suficiente. Recordemos que tenemos otros dos enfoques, pero computacionalmente son mucho mas costoso. Aquí consideramos un enfoque más simple, el basado en \emph{hill climbing} (HC), que logra un mejor rendimiento. Es posible que HC sea menos preciso, ya que puede incluir algunos métodos en el conjunto resultante de builders que podrían no ser necesarios para producir un conjunto acotado y exhaustivo de estructuras. Sin embargo, HC funcionó muy bien y calculó de manera consistente conjuntos mínimos de builders en nuestros experimentos (verificamos que el conjunto de builders calculados por HC coincidía con el conjunto de builders identificados manualmente para cada estudio de caso). Nuestro objetivo aquí es evaluar el impacto de utilizar builders para BEG (generación exhaustiva acotada) a partir de una API. 
+En este caso utilizamos la función de valoración que utiliza un generador exhaustivo para generar objetos de la API (ver \ref{sec:fitness})
+Observa que el algoritmo Hill Climbing realiza muchas invocaciones a un generador exhaustivo para la identificación de métodos builders. La idea clave que hace posible la identificación de builders es que a menudo los builders identificados para un alcance relativamente pequeño son el mismo conjunto de métodos que se necesitan para crear estructuras de cualquier tamaño. En otras palabras, una vez que el alcance para la computación de builders es lo suficientemente grande, aumentar el alcance dará como resultado el mismo conjunto de builders. Este resultado se asemeja a la hipótesis del alcance pequeño para la detección de errores \cite{Andoni02} (y \emph{transcoping} \cite{Rosner13}). Un alcance de 5 fue suficiente para la computación de builders en todos nuestros estudios de caso (verificamos manualmente que los builders calculados fueran los correctos en todos los casos). Después de que los builders se identifican de manera eficiente utilizando un alcance pequeño, podemos ejecutar \textsf{BEAPI} con los builders identificados utilizando un alcance mayor, por ejemplo, para generar objetos más grandes y poner a prueba el SUT. En la mayoría de nuestros estudios de caso, los builders comprenden un constructor y un solo método para agregar elementos a la estructura. Sin embargo, nuestro enfoque automatizado de identificación de builders mostró que, para los árboles Rojo-Negro, también se requería un método de eliminación (para alcances mayores que 3), ya que existen árboles con una configuración de balance particular (coloreando en rojo y negro para los nodos) que no se pueden construir solo agregando elementos al árbol. En contraste, los árboles AVL, que también están balanceados, no requieren el método de eliminación como builder, solo con el constructor de la clase y una rutina de adicción son suficientes. Esto demuestra que la identificación de builders no es trivial de realizar manualmente.
 
 \section{Algoritmo de BEAPI}
 \label{sec:beapiTechnique}
@@ -271,7 +274,8 @@ A continuación, comentaré los detalles del bucle for en las líneas 9-30. En p
 %Esto garantiza que \textsf{BEAPI} nunca crea objetos más grandes que el ámbito dado.
 Si ninguna de las situaciones anteriores ocurre, \texttt{makeCanonical} devuelve versiones canónicas de \texttt{o$_1$,$\ldots$,o$_n$,o$_r$} en las variables \texttt{c$_1$,$\ldots$,c$_n$,c$_r$}, respectivamente. A continuación, \textsf{BEAPI} realiza una coincidencia de estado comprobando que la estructura canónica \texttt{c$_1$} sea de tipo de referencia y que no haya sido creada por ninguna secuencia de prueba anterior (línea 19). Observa que \texttt{canonicalStrs} almacena todas las estructuras ya visitadas. Si \texttt{c$_1$} es una nueva estructura, se agrega a \texttt{canonicalStrs} (línea 27) y se agrega la secuencia que crea \texttt{c$_1$}, \texttt{newSeq}, al conjunto de secuencias de prueba que producen estructuras de tipo \texttt{T$_1$} (\texttt{newSeqs} en la línea 27). Además, se establece \texttt{newStrs} en verdadero para indicar que al menos se ha creado un nuevo objeto en la iteración actual (línea 22). Este proceso se repite para los objetos canónicos \texttt{c$_2$,$\ldots$,c$_n$,c$_r$} (líneas 24-29).
 
-\textsf{BEAPI} distingue los fallos del mal uso de la API en función del tipo de excepción (similarmente a las técnicas anteriores de generación de pruebas basadas en API \cite{Pacheco07}). Por ejemplo, \texttt{IllegalArgumentException} y \texttt{IllegalStateException} corresponden a usos incorrectos de la API, y el resto de las excepciones se consideran fallos de manera predeterminada. La implementación de \textsf{BEAPI} permite al usuario seleccionar las excepciones que corresponden a fallos y aquellas que no, configurando los parámetros correspondientes. Como se mencionó en la Sección~\ref{sec:motivating-example}, \textsf{BEAPI} asume que los métodos de la API lanzan excepciones cuando no se pueden ejecutar con entradas inválidas. Sostenemos que esta es una práctica común, llamada programación defensiva \cite{Liskov00}, que todos los programadores deberían seguir, ya que resulta en un código más robusto y mejora las pruebas de software en general \cite{Ammann16} (además de ayudar a las herramientas de generación de pruebas automatizadas). También argumentamos en la Sección~\ref{sec:motivating-example} que el esfuerzo de especificación requerido para la programación defensiva es mucho menor que escribir \texttt{repOK}s precisos (y eficientes) para BEG, y esto era cierto después de inspeccionar manualmente el código fuente de nuestros casos de estudio. Por otro lado, ten en cuenta que \textsf{BEAPI} puede utilizar especificaciones formales para revelar errores en la API, por ejemplo, ejecutando \texttt{repOK} y comprobando que devuelve verdadero en cada objeto generado del tipo correspondiente (como en Randoop \cite{Pacheco07}). Sin embargo, las especificaciones utilizadas para encontrar errores no necesitan ser muy precisas (por ejemplo, el \texttt{repOK} subespecificado \texttt{NCL} de la Sección~\ref{sec:motivating-example} es válido para encontrar errores), ni estar escritas de una manera particular (como lo requiere \textsf{Korat}). \textsf{BEAPI} también puede utilizar otros tipos de especificaciones más débiles y más simples de escribir para revelar errores, como violaciones de contratos específicos del lenguaje (por ejemplo, \texttt{equals} es una relación de equivalencia en Java), propiedades metamórficas \cite{Chen19}, afirmaciones proporcionadas por el usuario (\texttt{assert}), etc.
+\textsf{BEAPI} distingue los fallos del mal uso de la API en función del tipo de excepción (similarmente a las técnicas anteriores de generación de pruebas basadas en API \cite{Pacheco07}). Por ejemplo,\\
+\texttt{IllegalArgumentException} y \texttt{IllegalStateException} corresponden a usos incorrectos de la API, y el resto de las excepciones se consideran fallos de manera predeterminada. La implementación de \textsf{BEAPI} permite al usuario seleccionar las excepciones que corresponden a fallos y aquellas que no, configurando los parámetros correspondientes. Como se mencionó en la Sección~\ref{sec:motivating-example}, \textsf{BEAPI} asume que los métodos de la API lanzan excepciones cuando no se pueden ejecutar con entradas inválidas. Sostenemos que esta es una práctica común, llamada programación defensiva \cite{Liskov00}, que todos los programadores deberían seguir, ya que resulta en un código más robusto y mejora las pruebas de software en general \cite{Ammann16} (además de ayudar a las herramientas de generación de pruebas automatizadas). También argumentamos en la Sección~\ref{sec:motivating-example} que el esfuerzo de especificación requerido para la programación defensiva es mucho menor que escribir \texttt{repOK}s precisos (y eficientes) para BEG, y esto era cierto después de inspeccionar manualmente el código fuente de nuestros casos de estudio. Por otro lado, ten en cuenta que \textsf{BEAPI} puede utilizar especificaciones formales para revelar errores en la API, por ejemplo, ejecutando \texttt{repOK} y comprobando que devuelve verdadero en cada objeto generado del tipo correspondiente (como en Randoop \cite{Pacheco07}). Sin embargo, las especificaciones utilizadas para encontrar errores no necesitan ser muy precisas (por ejemplo, el \texttt{repOK} subespecificado \texttt{NCL} de la Sección~\ref{sec:motivating-example} es válido para encontrar errores), ni estar escritas de una manera particular (como lo requiere \textsf{Korat}). \textsf{BEAPI} también puede utilizar otros tipos de especificaciones más débiles y más simples de escribir para revelar errores, como violaciones de contratos específicos del lenguaje (por ejemplo, \texttt{equals} es una relación de equivalencia en Java), propiedades metamórficas \cite{Chen19}, afirmaciones proporcionadas por el usuario (\texttt{assert}), etc.
 
 Otra ventaja de \textsf{BEAPI} es que, para cada objeto generado, proporciona una secuencia de prueba que se puede ejecutar para crear el objeto. Esto contrasta con los enfoques basados en especificaciones (que generan un conjunto de objetos a partir de \texttt{repOK}). Encontrar una secuencia de invocaciones a métodos de la API que creen una estructura específica es un problema difícil en sí mismo, que puede ser bastante costoso computacionalmente \cite{Braione17} o requerir un esfuerzo significativo para realizarlo manualmente. Por lo tanto, a menudo los objetos generados por enfoques basados en especificaciones están "incrustados" cuando se utilizan para probar un SUT (por ejemplo, mediante el uso de reflexión en Java), lo que hace que las pruebas sean muy difíciles de entender y mantener, ya que dependen de los detalles de implementación de bajo nivel de las estructuras \cite{Braione17}.
 
